add scripts for json conversion and importing json data to db

--- a/proverbs/templates/proverbs/base.html
+++ b/proverbs/templates/proverbs/base.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <title>{% block title %}Go Proverbs{% endblock %}</title>
 </head>
 <body>
-    <div id="sidebar">
-        {% block sidebar %}
+    <div id="navbar">
+        {% block navbar %}
         <ul>
             <li><a class="nav-link" href="/proverbs">Homepage</a></li>
             <li><a class="nav-link" href="/proverbs/random">Random Proverb</a></li>
